# recurrent-rollback

./: LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
docs/: TECHNIQUE.md
examples/: mtp_speculative_decode.py  simple_example.py
src/: __init__.py  delta_net_rollback.py  split_recurrence.py
